--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.4"
+  },
   "peerDependencies": {
     "react": "15.x"
   },
@@ -27,8 +29,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
-  "author": "",
-  "homepage": "",
+  "author": "Wickramaranga Abeygunawardhana",
+  "homepage": "https://umstek.github.io",
   "license": "MIT",
   "repository": "",
   "keywords": [
